Sjekker at status, arbeidsgiver og arbeidsforholdref matcher før vi annerkjenner matchende andel (#4076)